--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -13,6 +13,6 @@
         </p>
       <% end %>
 		<br>
-   <p> Pour balancer une nouvelle info dont tout le monde se moque c'est <a href="/gossips/new/">ICI !</a> </p>
+   <p> Pour balancer une nouvelle info dont tout le monde se moque c'est <a href="/gossips/new/">ICI</a> !</p>
   </body>
 </html>
