--- a/lib/views/new_gossip.erb
+++ b/lib/views/new_gossip.erb
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Crée un ragot !</h1>
-    <p>Balance ta fake news via le formulaire ci-dessous</p>
+    <h2>Balance ta fake news via le formulaire ci-dessous</h2>
     <form action='/gossips/new/' method='POST'>
       Saisi ici ton nom :  <input type='text' name='gossip_author'/><br/>
       Balance ton porc : <input type='text' name='gossip_content'/><br/>
