--- a/lib/views/new_gossip.erb
+++ b/lib/views/new_gossip.erb
@@ -7,7 +7,7 @@
     <h2>Balance ta fake news via le formulaire ci-dessous</h2>
     <form action='/gossips/new/' method='POST'>
       Saisi ici ton nom :  <input type='text' name='gossip_author'/><br/>
-      Balance ton porc : <input type='text' name='gossip_content'/><br/>
+      Balance ton potin : <input type='text' name='gossip_content'/><br/>
       <input type='submit'/>
     </form>
   </body>
