--- a/lib/views/new_gossip.erb
+++ b/lib/views/new_gossip.erb
@@ -10,5 +10,6 @@
       Balance ton potin : <input type='text' name='gossip_content'/><br/>
       <input type='submit'/>
     </form>
+    <p><a href="/">Revenir à l'accueil</a></p>
   </body>
 </html>
