--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Mon super site de FAKE NEWS !</h1>
+    <h2> Liste des potins : </h2>
    
  			<% gossips.each_with_index do |gossip, id| %>
        
